--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>Metronome</title>
 </head>
 <body>
-    <audio id="metronome-click" src="https://www.soundjay.com/button/sounds/button-4.mp3"></audio>
+    <audio id="metronome-click">
+        <source src="https://www.soundjay.com/button/sounds/button-4.mp3" type="audio/mpeg">
+        <source src="https://www.soundjay.com/button/sounds/button-4.ogg" type="audio/ogg">
+        Your browser does not support the audio element.
+    </audio>
     <input type="number" id="bpm" value="120" readonly> BPM
     <button onclick="startMetronome()">Start</button>
     <button onclick="stopMetronome()">Stop</button>
@@ -23,7 +27,9 @@
         var audio = document.getElementById('metronome-click');
         
         metronomeInterval = setInterval(function() {
-            audio.play();
+            audio.play().catch(error => {
+                console.error('Playback error:', error);
+            });
         }, interval);
     }
 
