--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
     <audio id="metronome-click">
-        <source src="https://www.soundjay.com/button/sounds/button-4.mp3" type="audio/mpeg">
-        <source src="https://www.soundjay.com/button/sounds/button-4.ogg" type="audio/ogg">
+        <source src="audio/button-4.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <input type="number" id="bpm" value="120" readonly> BPM
